fix: style header and body are aligned

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,3 @@
-
-.header{
-    width: 100%;
+@media (min-width: 481px) and (max-width: 767px) {
+    
 }
