--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,9 +1,7 @@
 .container {
     color: white;
-    min-width: 100%;
-    min-height: 100%;
     text-align: center;
-    margin-left: -8px;
+    margin: auto 0;
 }
 mat-form-field {
     width: 500px;
