--- a/src/app/loggin/loggin.component.scss
+++ b/src/app/loggin/loggin.component.scss
@@ -1,6 +1,6 @@
 .container {
     display: block;
-    height: 200%;
+    max-height: 100%;
 }
 .image {
     margin-left: -35px;
