--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,3 +1,11 @@
+.container {
+    min-width: 30%;
+    height: 60px;
+    background-color: white;
+    z-index: 40;
+    margin-bottom: 40px;
+    position: static;
+}
 .example-spacer {
     flex: 1 1 auto;
 }
@@ -22,14 +30,12 @@ img {
     background-color: white;
 }
 mat-toolbar {
-    position: fixed;
     display: flex;
     margin-left: -8px;
 }
 .profile-photo {
-    
     border-radius: 50%;
 }
-.profile-email{
+.profile-email {
     margin-bottom: 8px;
 }
